项目文件结构大修改

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "vite-electron-react-ts-template",
   "version": "0.0.0",
-  "description": "",
+  "description": "a electron app",
   "main": ".out/main/index.js",
   "author": "Ni But Crazy",
   "license": "MIT",
   "scripts": {
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "dev:web": "vite ./src/renderer",
     "build": "npm run typecheck && electron-vite build",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
