--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Ni But Crazy",
   "license": "MIT",
   "scripts": {
-    "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "start": "chcp 65001 && electron-vite preview ",
+    "dev": "chcp 65001 && electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
@@ -24,20 +24,21 @@
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
+    "electron-devtools-installer": "^4.0.0",
     "electron-vite": "^3.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.5.1",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
-    "react-router": "^7.5.1",
-    "@tailwindcss/vite": "^4.1.4",
-    "tailwindcss": "^4.1.4",
     "zustand": "^5.0.3"
   }
 }
