--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@vitejs/plugin-react": "^4.3.4",
     "electron": "^35.1.5",
     "electron-builder": "^25.1.8",
+    "electron-builder-squirrel-windows": "25.1.8",
     "electron-devtools-installer": "^4.0.0",
     "electron-vite": "^3.1.0",
+    "less": "^4.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.1",
