删去了tailwindcss,添加了global文件夹提供全局定义访问支持，main文件夹添加了static文件夹别名路径支持

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,6 +20,9 @@
       ],
       "@utils/*": [
         "./src/renderer/src/utils/*"
+      ],
+      "@global/*": [
+        "./src/renderer/src/global/*"
       ]
     },
     "module": "ESNext",
