--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,11 @@
     "composite": true,
     "types": ["electron-vite/node"],
 
+    "paths": {
+      "@static/*": [
+        "./static/*"
+      ]
+    },
     "moduleResolution": "bundler",
     "noEmit": true,
 
