--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,7 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
   "include": ["electron.vite.config.*", "src/main/**/*", "src/preload/**/*"],
+  "exclude": ["static"],
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"],
@@ -25,5 +26,5 @@
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
-  },
+  }
 }
