移动了router路由管理的位置

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,6 +24,9 @@
       ],
       "@global/*": [
         "./src/renderer/src/global/*"
+      ],
+      "@hooks/*": [
+        "./src/renderer/src/hooks/*"
       ]
     },
     "module": "ESNext",
