--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "version": "nbc-auto-changelog -p && git add CHANGELOG.md"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["esbuild", "electron"]
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
@@ -39,6 +43,7 @@
     "react-router": "^7.5.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "nbc-auto-changelog": "^1.0.3"
   }
 }
