--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-electron-react-ts-template",
   "version": "0.0.0",
   "description": "a electron app",
+  "type": "module",
   "main": ".out/main/index.js",
   "author": "Ni But Crazy",
   "license": "MIT",
@@ -46,7 +47,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.5.1",
     "typescript": "^5.8.3",
-    "vite": "^6.3.4",
+    "vite": "^6.3.6",
     "zustand": "^5.0.3"
   }
 }
