--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild",
-      "electron"
+      "electron",
+      "electron-winstaller",
+      "esbuild"
     ]
   },
   "dependencies": {
@@ -31,23 +32,22 @@
     "@electron-toolkit/utils": "^4.0.0"
   },
   "devDependencies": {
-    "@electron-toolkit/tsconfig": "^1.0.1",
+    "@electron-toolkit/tsconfig": "^2.0.0",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "electron": "^35.1.5",
-    "electron-builder": "^25.1.8",
-    "electron-builder-squirrel-windows": "25.1.8",
-    "electron-devtools-installer": "^4.0.0",
-    "electron-vite": "^3.1.0",
-    "less": "^4.3.0",
-    "nbc-auto-changelog": "^1.0.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.5.1",
-    "typescript": "^5.8.3",
+    "@vitejs/plugin-react": "^5.0.4",
+    "electron": "^38.0.0",
+    "electron-builder": "^26.0.2",
+    "electron-builder-squirrel-windows": "26.0.12",
+    "electron-vite": "^4.0.1",
+    "less": "^4.4.2",
+    "nbc-auto-changelog": "^1.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router": "^7.9.4",
+    "typescript": "^5.9.3",
     "vite": "^6.3.6",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.8"
   }
 }
