--- a/static/react-devtools/manifest.json
+++ b/static/react-devtools/manifest.json
@@ -19,7 +19,7 @@
    "content_security_policy": {
       "extension_pages": "script-src 'self'; object-src 'self'"
    },
-   "description": "为 Chrome 添加了 React 调试工具，并修复了一些BUG\n\nCreated from revision 8c02ddf16a on 2025/7/12.",
+   "description": "在 Chrome 浏览器开发工具中添加 React 调试工具(基于提交版本 a5bba2bf62 on 2025/10/17)",
    "devtools_page": "main.html",
    "host_permissions": [ "\u003Call_urls>" ],
    "icons": {
@@ -34,8 +34,8 @@
    "name": "React Developer Tools 汉化版",
    "optional_permissions": [ "clipboardWrite" ],
    "permissions": [ "scripting", "storage", "tabs" ],
-   "version": "6.1.5",
-   "version_name": "6.1.5 (2025/7/12)",
+   "version": "7.0.0",
+   "version_name": "7.0.0 (2025/10/17)",
    "web_accessible_resources": [ {
       "extension_ids": [  ],
       "matches": [ "\u003Call_urls>" ],
